Add CSP html output
