# mc_openapi/handlers.py
@@ -1,6 +1,8 @@
 import datetime
 import logging
 import os
+
+from flask import render_template
 from mc_openapi.doml_mc.html_output import html_template
 
 from mc_openapi.doml_mc.intermediate_model.metamodel import DOMLVersion
@@ -71,7 +73,12 @@ def csp(body, version=None):
         dmc = init_model(doml_xmi, doml_version)
         
         # TODO: Do something with the results
-        verify_csp_compatibility(dmc)
+        return verify_csp_compatibility(dmc)
+    
 
     except Exception as e:
         return make_error("The supplied DOMLX model is malformed or its DOML version is unsupported.", debug_msg=str(e)), 400
+
+def csp_html(body, version=None):
+    ret = csp(body, version)
+    return render_template('csp.html.jinja', **ret).replace('\n', '')
